# cmake_sfml_test

./: CMakeLists.txt  README.md  start.sh
src/internal/: CMakeLists.txt
src/internal/main-exe/: CMakeLists.txt  main.cpp
src/internal/position/: CMakeLists.txt  position.cpp  position.hpp
